--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <div class="header-content">
                 <h1>My Tasks</h1>
                 <button id="theme-toggle" class="theme-btn" aria-label="テーマ切り替え">🌙</button>
-
             </div>
             <p id="date-display"></p>
         </header>
@@ -105,10 +104,8 @@
         <img src="miyabi.png" alt="Miyabi">
     </div>
 
-
-
     <!-- メインロジックの読み込み -->
-    <script type="module" src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
