--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                 <span><span id="active-count">0</span> 件の未完了タスク</span>
                 <div class="control-buttons">
                     <button id="sort-priority-btn" class="text-btn">優先度順</button>
+                    <button id="sort-date-btn" class="text-btn">日付順</button>
                     <!-- 完了済み一括削除ボタン -->
                     <button id="clear-completed-btn" class="text-btn">完了済みを削除</button>
                 </div>
