明さんフェードインを実装

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
         <img src="miyabi.png" alt="Miyabi">
     </div>
 
+    <div id="akira-overlay" class="hidden">
+        <img src="akira.png" alt="Akira">
+    </div>
+
     <!-- メインロジックの読み込み -->
     <script src="app.js"></script>
 </body>
