ダークモード時に優先順位を開いたとき、見づらい問題を解消

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <link rel="icon" type="image/png" href="favicon.png">
 
     <!-- スタイルシートの読み込み -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="focus-mode.css">
+    <link rel="stylesheet" href="style.css?v=20251214-1">
+    <link rel="stylesheet" href="focus-mode.css?v=20251214-1">
+
 </head>
 
 <body>
@@ -120,7 +121,7 @@
     </div>
 
     <!-- メインロジックの読み込み -->
-    <script src="app.js"></script>
+    <script src="app.js?v=20251214-1" defer></script>
 </body>
 
 </html>
