ライトモード時の色を水色系に変更

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" href="favicon.png">
 
     <!-- スタイルシートの読み込み -->
-    <link rel="stylesheet" href="style.css?v=20251214-1">
+    <link rel="stylesheet" href="style.css?v=20251214-blue">
     <link rel="stylesheet" href="focus-mode.css?v=20251214-1">
 
 </head>
