日付の横に「なし」を追加、リセットボタンを追加

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                                 <button type="button" class="quick-date-btn" data-date="today">今日</button>
                                 <button type="button" class="quick-date-btn" data-date="tomorrow">明日</button>
                                 <button type="button" class="quick-date-btn" data-date="next-week">来週</button>
+                                <button type="button" class="quick-date-btn" data-date="none">なし</button>
                             </div>
                         </div>
 
@@ -79,6 +80,15 @@
                             </div>
                         </div>
 
+                        <button id="reset-btn" aria-label="入力をリセット" title="入力をリセット">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M3 6h18M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
+                                    stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </button>
                         <button id="add-btn" aria-label="タスクを追加">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
