集中モードを Space キーでも解除できるように修正

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <!-- 集中モードオーバーレイ -->
     <div id="focus-overlay">
-        <div class="focus-exit-hint">ESCで集中モードを終了</div>
+        <div class="focus-exit-hint">ESC または Space で集中モードを終了</div>
     </div>
 
     <!-- メインロジックの読み込み -->
