活動時間の表示と、リセットする機能を追加

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
                 <h1>彼岸島タスク管理</h1>
                 <button id="theme-toggle" class="theme-btn" aria-label="テーマ切り替え">🌙</button>
             </div>
-            <p id="date-display"></p>
+            <div class="header-status-bar">
+                <p id="date-display"></p>
+                <div class="work-time-display">
+                    <span>活動時間: <span id="work-time-value">0</span>分</span>
+                    <button id="reset-work-time-btn" title="活動時間をリセット">🔄</button>
+                </div>
+            </div>
         </header>
 
         <main>
