手動休憩ボタンを追加

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <p id="date-display"></p>
                 <div class="work-time-display">
                     <span>活動時間: <span id="work-time-value">0</span>分</span>
+                    <button id="manual-break-btn" title="休憩をとる">☕</button>
                     <button id="reset-work-time-btn" title="活動時間をリセット">🔄</button>
                 </div>
             </div>
