--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@400;500;700&display=swap"
         rel="stylesheet">
 
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="image/favicon.png">
 
     <!-- スタイルシートの読み込み -->
     <link rel="stylesheet" href="style.css?v=20251214-blue">
@@ -162,11 +162,16 @@
     </div>
 
     <div id="miyabi-overlay" class="hidden">
-        <img src="miyabi.png" alt="Miyabi">
+        <img src="image/miyabi.png" alt="Miyabi">
     </div>
 
     <div id="akira-overlay" class="hidden">
-        <img src="akira.png" alt="Akira">
+        <img src="image/akira.png" alt="Akira">
+    </div>
+
+    <!-- タスク完了時の演出オーバーレイ -->
+    <div id="task-complete-overlay" class="hidden">
+        <img id="task-complete-image" src="" alt="Task Complete!">
     </div>
 
     <!-- 集中モードオーバーレイ -->
